--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ h1{
     color: #ffffff;
 }
 
-#page-contents{
+section{
     background-color: #ffffff;
     margin: auto;
     margin-top: 2em;
@@ -63,9 +63,10 @@ h1{
     border-style: solid;
     border-width: .0625em;
     border-color: #666666;
+    overflow: auto;
 }
 
-#page-contents p{
+section p{
     font-family: Arial, Helvetica, sans-serif;
 }
 /* this div holds the about me text */
@@ -209,6 +210,92 @@ form p{
     object-fit: contain;
     
 }
+
+/* MEDIA QUERIES */
+/* // Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+
+    header{
+        width: 100%;
+    }
+
+    .directory{
+        width: 100%;
+    }
+
+    .contents{
+        width: 75%;
+    }
+
+    #contact-box{
+        width: 75%; 
+    }
+
+    #gallery{
+        width: 75%;
+    }
+
+    #pic1{
+        display: none;
+    }
+}
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+
+    header{
+        width: 100%;
+    }
+
+    .directory {
+        width: 100%;
+    }
+
+    .contents{
+        width: 75%;
+    }
+
+    #contact-box{
+        width: 75%; 
+    }
+
+    #gallery {
+        width: 75%;
+    }
+
+}
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+
+    header{
+        width: 100%;
+    }
+
+    .directory {
+        width: 100%;   
+    }
+
+    .contents{
+        width: 75%;
+    }
+
+    #contact-box{
+        width: 75%; 
+    }
+
+    #gallery {
+        width: 75%;
+    }
+}
+
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+
+}
+
+/* // Extra large devices (large desktops) */
+/* // No media query since the extra-large breakpoint has no upper bound on its width */
 
 
 
